--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,22 @@
 {
     "extends": [
         "airbnb",
-        "prettier"
+        "prettier",
+        "plugin:import/errors",
+        "plugin:import/warnings"
     ],
     "env": {
         "jest": true
     },
     "globals": {
         "document": true
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "moduleDirectory": ["node_modules", "src/"]
+            }
+        }
     },
     "rules": {
         "react/jsx-filename-extension": [
@@ -19,6 +28,7 @@
                 ]
             }
         ],
-        "react/jsx-one-expression-per-line": "off"
+        "react/jsx-one-expression-per-line": "off",
+        "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
     }
 }
