--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,15 @@
         "plugin:import/errors",
         "plugin:import/warnings"
     ],
+    "plugins": [
+        "react-hooks"
+    ],
     "env": {
         "jest": true
     },
     "globals": {
-        "document": true
+        "document": true,
+        "window": true
     },
     "settings": {
         "import/resolver": {
@@ -29,6 +33,8 @@
             }
         ],
         "react/jsx-one-expression-per-line": "off",
-        "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
+        "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
